# research-navigator-agent

./: .env.example  .gitignore  CLAUDE.md  PHASE2_COMPLETE.md  PHASE2_SUMMARY.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  TEST_RESULTS.md  VERBOSE_LOGGING.md  pyproject.toml  requirements.txt  test_dummy.py  test_phase3.py  test_phase4.py  test_phase4_quick.py  test_rag.py  test_verbose.py
knowledge/: README.md
knowledge/sample_docs/: classical_computing.md  quantum_computing.md
src/agent/: controller.py  graph.py  nodes.py  schema.py
src/cli/: main.py
src/config/: settings.py
src/tools/: api_logger.py  llm_client.py  rag_loader.py  rag_search.py  tavily_tool.py
